--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,19 @@
   text-decoration: none;
   box-sizing: border-box;
 }
+.App{
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
+}
+.homepage, .errPage{
+  background-color: aliceblue;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 40px;
+  color: black;
+  height: 100vh;
+  width: 100vw;
+  font-weight: 700;
+}
